src/css/navbar.scss
.navbar-github {
  display: flex;
  gap: 4px;
  color: var(--ifm-menu-color);
  padding: var(--ifm-menu-link-padding-vertical)
    var(--ifm-menu-link-padding-horizontal);

  text-decoration: none !important;
  border-radius: 0.25rem;

  &:hover {
    background: var(--ifm-menu-color-background-hover);
    color: var(--ifm-menu-color);
  }

  @media screen and (min-width: 996px) {
    justify-content: center;
    align-items: center;
    color: initial;

    padding: 0;

    span {
      display: none;
    }

    &:hover {
      background: inherit;
      color: var(--ifm-navbar-link-hover-color);
    }
  }
}

